# URL-Classifier-API

./: FEATURES.md  MODEL.md  Notes.md.txt  README.md  URL_classification_model_BENIGN_MALICIOUS_3000k-Model_1-38_features.json  URL_classification_model_BENIGN_MALICIOUS_3000k-Model_2-38_features-2nd_model.json  URL_classification_model_BENIGN_MALICIOUS_6000k-38_features-3rd_model.json  app.py  pyproject.toml  requirements.txt  script.py  url_classifier.py
templates/: home.html
utils/: url_feature_utils.py
