[project]
name = "url-classifier-api"
version = "0.1.0"
description = "URL classifier built with XGBoost, a supervised learning algorithm. It uses 38 features: 36 lexical and 2 host-based."
authors = [
    {name = "lei", email = "leahjuarezz@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.13.4",
    "blinker==1.9.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "dnspython==2.7.0",
    "filelock==3.18.0",
    "Flask==3.1.1",
    "idna==3.10",
    "ipwhois==1.3.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "joblib==1.5.1",
    "MarkupSafe==3.0.2",
    "numpy==2.3.1",
    "pandas==2.3.1",
    "python-dateutil==2.9.0.post0",
    "python-whois==0.9.5",
    "pytz==2025.2",
    "requests==2.32.4",
    "requests-file==2.1.0",
    "scikit-learn==1.7.1",
    "scipy==1.16.0",
    "six==1.17.0",
    "soupsieve==2.7",
    "threadpoolctl==3.6.0",
    "tld==0.13.1",
    "tldextract==5.3.0",
    "tqdm==4.67.1",
    "typing_extensions==4.14.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "Werkzeug==3.1.3",
    "whois==1.20240129.2",
    "whoiser==1.0.0",
    "xgboost==3.0.2",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
# commands:
# poetry install
# poetry add requests - requests is a package
# poetry run python script.py

#[build-system]
#requires = ["setuptools>=45", "wheel"]
#build-backend = "setuptools.build_meta"
# commands
# pip install -e .
# pip install requests
# python script.py